--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
   <body>
     <!-- Optional JavaScript -->
 
-    <div class="container-fluid" style="position: fixed !important; top: 0">
+    <!-- navbar start -->
+    <div
+      class="container-fluid"
+      style="position: fixed !important; top: 0; z-index: 4"
+    >
       <nav id="navbar_id" class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <div class="row">
@@ -105,8 +109,13 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link">
-                          <i class="fas fa-user-lock"></i> login</a
+                        <a
+                          data-toggle="modal"
+                          data-target="#register_id"
+                          href="#"
+                          class="nav-link"
+                        >
+                          <i class="fas fa-user-lock"></i> Register</a
                         >
                       </li>
                     </ul>
@@ -131,145 +140,113 @@
         </div>
       </nav>
     </div>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nam iusto
-      officiis autem, vero incidunt, aliquam ad impedit, voluptates dolore quam
-      expedita distinctio aliquid quo sed sit adipisci? Eum, ut! Odit incidunt
-      deserunt, doloribus recusandae consectetur amet eveniet ullam voluptatibus
-      ex voluptatem dicta dolores nobis vero, labore facilis eaque esse
-      accusantium ipsam nihil, quam laboriosam! Asperiores id vero mollitia
-      culpa. Reprehenderit atque dolores tenetur porro odit maxime ullam
-      voluptatem quod alias, provident omnis cumque aliquid cum praesentium iure
-      velit accusamus sint ratione similique fugit. Laborum quaerat laboriosam
-      ut totam error. Tempora quo sed similique facere, consequuntur inventore
-      vitae cumque ea nulla delectus voluptatem asperiores. Ipsa sint temporibus
-      eaque veniam, nisi qui voluptas pariatur quisquam dolores deleniti nostrum
-      harum facilis vel. Voluptatibus aliquid repellat delectus voluptatum
-      libero iusto aspernatur saepe eius error! Recusandae, dolores.
-      Necessitatibus nulla dolor reprehenderit laudantium consectetur vero! Sed
-      quos consequuntur ad autem at tempora! Numquam, saepe nostrum. Quis
-      voluptatibus ipsam fuga esse perferendis harum officiis explicabo, id
-      quibusdam dicta eum ab dolorem odio excepturi incidunt! Odit sed vel
-      molestias aspernatur officiis voluptatem molestiae adipisci officia,
-      facilis corrupti. Velit amet corrupti qui non ducimus commodi enim magni
-      ratione dicta perspiciatis illum, fugiat odit, ea eos porro. Nobis
-      accusantium commodi amet ipsum ratione. Voluptas odio inventore doloribus
-      cupiditate alias. Asperiores ratione magni voluptas. Animi, porro.
-      Voluptates facilis dolores accusantium iure est, deserunt doloremque
-      quibusdam adipisci omnis, odit qui, ratione distinctio odio animi quas ab
-      iusto ipsam reprehenderit quisquam cupiditate? Iusto, vero ut quaerat
-      placeat aut, consectetur ipsum quod tenetur ipsam quo nostrum similique
-      labore blanditiis rem excepturi assumenda provident facilis quibusdam
-      quidem amet perspiciatis. Consectetur voluptatibus doloribus similique
-      delectus! Aliquam eos, id numquam assumenda optio tempora inventore a?
-      Voluptatum enim facere, adipisci vero placeat commodi reprehenderit sed
-      asperiores quos iure quas iste expedita magnam praesentium. Eveniet
-      asperiores dolorum maxime! Voluptas, similique? Possimus porro voluptatem
-      suscipit ullam. Illo exercitationem velit, ex odit doloremque recusandae
-      dolorum modi obcaecati tenetur repellat. Voluptas neque repellat iure eos
-      corporis animi assumenda officia ipsum temporibus. Voluptatibus, maxime
-      aliquid qui explicabo optio doloremque dignissimos quis ratione cupiditate
-      tempore possimus delectus blanditiis vel a praesentium quaerat facere
-      repellendus! Beatae iste minus accusamus nisi laborum doloremque facere
-      necessitatibus! Quia amet quam architecto aliquid nobis at ad repellat,
-      repellendus exercitationem voluptatum. Nam praesentium culpa quae, eveniet
-      numquam, necessitatibus qui officiis quibusdam assumenda dolor maxime
-      doloremque. Distinctio exercitationem quo suscipit? Error nesciunt vero,
-      ipsa molestias possimus, praesentium ea exercitationem nisi inventore
-      soluta repellat quia. Aperiam assumenda error minima saepe soluta illo,
-      voluptate dicta accusantium, laborum, delectus vero veniam voluptates
-      beatae. Praesentium explicabo asperiores, iste veritatis error sint
-      aliquam est obcaecati dolorem temporibus hic quidem ducimus eius,
-      architecto illum quaerat placeat beatae reiciendis consequatur officiis
-      eos fuga commodi? Officiis, ab eos. Eos, veniam? Repudiandae consequatur
-      illo eos, vel nobis alias. Cupiditate soluta distinctio quia a ex at
-      laudantium dolor? Voluptate officia quos placeat accusantium voluptatibus
-      odit fugiat, quae ipsa consectetur molestiae. Explicabo dolore soluta eius
-      et dolorem enim amet laborum asperiores accusantium cupiditate ducimus ad
-      modi atque omnis iste dolorum voluptatum laudantium, velit ipsum animi ut.
-      Aspernatur nostrum perspiciatis dolorum neque. Molestiae in dicta minus
-      ipsum saepe accusantium soluta nemo excepturi sunt, quaerat eos veniam
-      dolorum eius suscipit quo ipsam earum quasi labore dolore magni! Similique
-      placeat eius minus suscipit accusamus. Sunt cupiditate obcaecati culpa
-      eligendi laudantium tenetur praesentium aliquam unde mollitia dignissimos
-      magni similique et animi qui, enim, laboriosam nam voluptas ea asperiores
-      labore facere. Voluptate quos rem velit delectus. Magni impedit nostrum
-      beatae culpa provident consequatur adipisci dicta perspiciatis explicabo
-      vitae ut corporis dignissimos voluptate, maxime optio enim, est,
-      exercitationem dolorum. Itaque quaerat excepturi vero optio! Odio, vel
-      labore? Quibusdam eos ex dignissimos dolore, ea, exercitationem optio,
-      distinctio deleniti quod adipisci assumenda. Doloribus voluptatibus sunt
-      repudiandae ab optio voluptatem totam distinctio eligendi, quos saepe at
-      ipsa numquam amet quae! Saepe temporibus labore quas nesciunt dignissimos
-      molestias. Debitis non libero dolore rerum veniam illum fugiat laudantium
-      quaerat tempore aliquam aspernatur minima accusamus, iure ducimus
-      molestiae corporis omnis repellendus, aperiam architecto. Illo ad
-      assumenda vel itaque natus harum excepturi sit iure. Id, temporibus autem.
-      Consequuntur architecto veniam iure quos earum, alias maxime dolorem rem
-      dolore corporis numquam quaerat. Odit, provident accusantium? Qui, veniam
-      nesciunt. Ullam reprehenderit assumenda eius culpa perspiciatis omnis quas
-      asperiores, veniam deserunt unde. Inventore voluptate, similique dolorum
-      distinctio eaque quaerat est deserunt beatae doloremque sapiente amet
-      minus voluptatibus! Ullam velit, animi neque esse veniam error. Eos fuga
-      recusandae excepturi fugiat delectus dolorum nisi ex sequi obcaecati
-      suscipit. Natus deserunt libero at obcaecati corporis, facilis officiis
-      quae qui quis. Neque temporibus labore fugit. Eligendi fugiat sequi
-      veritatis nostrum, mollitia maxime beatae reprehenderit, odit iusto labore
-      minima eveniet ab vel cupiditate facere corrupti qui ipsum, vero illo
-      omnis quis quia? Voluptate at doloribus harum sit dignissimos nulla
-      repudiandae aspernatur soluta nostrum obcaecati quisquam recusandae culpa
-      aliquam ullam deleniti, mollitia architecto molestiae reprehenderit
-      accusantium velit ex similique! Dolor doloremque praesentium eum. Veniam
-      id at maiores, est sequi, optio officiis ex sapiente, nostrum totam alias
-      amet aliquid non incidunt perspiciatis dolore quaerat excepturi nulla
-      eaque consectetur magni. Ratione dolore pariatur at deserunt. Illum
-      deleniti excepturi quaerat dolor voluptate molestiae doloribus
-      perspiciatis fuga nisi, iure vero alias amet ipsa harum officia, neque
-      ratione aliquid sapiente. Vero minus veniam repudiandae libero autem
-      deserunt architecto? Hic perferendis illo tenetur quo id totam tempora eum
-      incidunt nulla dignissimos nostrum temporibus, porro quibusdam amet
-      impedit nesciunt suscipit, tempore voluptatum! Obcaecati soluta impedit
-      eum! Ullam porro quidem itaque. Repellat totam iste, doloremque, non
-      perspiciatis quis nam obcaecati aliquam delectus optio dolore animi magni
-      dolorem. Saepe illo perspiciatis eligendi fugit illum nisi? Id doloribus,
-      quas nihil quibusdam officiis molestiae? Adipisci officia numquam modi
-      earum debitis voluptate rerum tempore? Tempora atque alias minus, quae
-      blanditiis sunt molestias sapiente impedit unde, non hic mollitia
-      praesentium aperiam soluta, aliquam asperiores maiores earum. Corporis,
-      nihil rerum! Vel quae atque laborum voluptatibus. Asperiores, repellat
-      odit. Nam necessitatibus nostrum architecto dolorum pariatur sit corrupti
-      voluptates quod iusto, hic, omnis quisquam unde fugit provident vero
-      nesciunt! Saepe, temporibus similique. Doloremque, assumenda? Ex
-      voluptatum eaque consequuntur deleniti. Suscipit mollitia reiciendis quia
-      expedita odio officia? Eligendi accusamus mollitia quos quasi quisquam
-      illum placeat repellat, ratione, dolore accusantium commodi! Optio commodi
-      ex nemo, deleniti delectus corporis. Libero beatae dicta ut, facere
-      laboriosam ullam? Incidunt vel vitae ipsam odit itaque earum possimus,
-      laboriosam rem, eius ipsum aperiam est eligendi voluptatem? Nemo iusto
-      sint alias explicabo pariatur ipsam tempora neque, illum nam recusandae
-      ipsum quisquam eius laboriosam, animi quod ullam autem doloribus maiores
-      itaque adipisci. Quasi molestiae corporis libero et aliquid. Distinctio
-      quisquam aspernatur nobis fuga. Est dolore accusantium explicabo enim
-      harum iste officiis perspiciatis! Voluptatem quo maxime aliquid nam
-      aspernatur repudiandae optio harum quisquam ut. Commodi vel ipsum
-      perspiciatis asperiores? Error quas facilis recusandae dignissimos, eius,
-      aliquam perspiciatis ipsa assumenda iure maiores ipsam esse nostrum,
-      distinctio voluptatum temporibus. Atque quidem doloribus accusamus dolorem
-      itaque vitae. Incidunt ea possimus iure doloremque. Quas inventore
-      suscipit dolores id repudiandae, esse nihil architecto nesciunt qui quis
-      impedit praesentium commodi optio illum fugit veritatis corporis magnam ab
-      placeat expedita eos? Error et saepe voluptate quibusdam. Adipisci debitis
-      consectetur rem. Accusantium dolorum quas perspiciatis molestiae ipsam
-      fugit sapiente quis tempore architecto, corrupti a voluptas doloribus
-      saepe cum quidem? Earum animi corrupti debitis laudantium non possimus
-      dolor. A repellat fugit, qui quasi perspiciatis odit, dolores ea non
-      fugiat doloremque exercitationem? Dicta, nam. Aliquam nobis illo libero
-      blanditiis, velit similique, perspiciatis officia amet laudantium numquam
-      saepe voluptatum sequi? At, veritatis sit delectus expedita dolor
-      voluptatum saepe eum sequi? Dolor, sint animi. Adipisci, nobis distinctio?
-      Officiis dolores nam suscipit, temporibus nisi possimus doloremque ullam
-      id, accusamus omnis velit ut.
-    </p>
+    <!-- navbar ends -->
+    <!-- register_id -->
+    <div class="modal fade" id="register_id" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <!-- modal-header -->
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
+          </div>
+          <!-- modal-body -->
+          <div class="modal-body">
+            <h4 class="text-center text-primary">Register</h4>
+
+            <form action="#" method="get" autocomplete="true">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-2">Adı:</div>
+                  <div class="col-md-10">
+                    <div class="form-group">
+                      <input
+                        id="register_name"
+                        name="register_name"
+                        type="text"
+                        class="form-control"
+                        placeholder="lütfen adınızı giriniz"
+                        required
+                        autofocus
+                      />
+                    </div>
+                  </div>
+
+                  <div class="col-md-2">Soyadı:</div>
+                  <div class="col-md-10">
+                    <div class="form-group">
+                      <input
+                        id="register_surname"
+                        name="register_surname"
+                        type="text"
+                        class="form-control"
+                        placeholder="lütfen soyadınızı giriniz"
+                        required
+                      />
+                    </div>
+                  </div>
+
+                  <div class="col-md-2">Şifre:</div>
+                  <div class="col-md-10">
+                    <div class="form-group">
+                      <input
+                        id="register_password"
+                        name="register_password"
+                        type="text"
+                        class="form-control"
+                        placeholder="lütfen sifrenizi giriniz"
+                        required
+                      />
+                    </div>
+                  </div>
+
+                  <div class="col-md-2">Email:</div>
+                  <div class="col-md-10">
+                    <div class="form-group">
+                      <input
+                        id="register_email"
+                        name="register_email"
+                        type="text"
+                        class="form-control"
+                        placeholder="lütfen emaliizi giriniz"
+                        required
+                      />
+                    </div>
+                  </div>
+
+                  <div class="col-md-2"></div>
+                  <div class="col-md-10">
+                    <button type="reset" class="btn btn-danger">Temizle</button>
+                    <button type="submit" class="btn btn-primary">
+                      Gönder
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- modal-footer -->
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">
+              Kapat
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- header start -->
+    <header></header>
+    <!-- header finish -->
+
+    <!-- main start -->
+    <main></main>
+    <!-- main finish -->
+
+    <!-- footer start -->
+    <footer></footer>
+    <!-- footer finish -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
@@ -287,8 +264,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-
-    <!-- external js -->
-    <script src="js/external.js"></script>
   </body>
+  <!-- external js -->
+  <script src="js/external.js"></script>
 </html>
