--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
                           ><i class="fas fa-newspaper"></i> Haberler</a
                         >
                       </li>
+                      <li class="nav-item">
+                        <a
+                          href="#sss_id"
+                          class="nav-link"
+                        >
+                          <i class="fa fa-battery-full" aria-hidden="true"></i> S.S.S</a
+                        >
+                      </li>
                       <li class="nav-item dropdown">
                         <a
                           class="nav-link dropdown-toggle"
@@ -92,34 +100,42 @@
                           data-bs-toggle="dropdown"
                           aria-expanded="false"
                         >
-                          Dropdown
+                        <i class="fas fa-user-lock"></i>  Login
                         </a>
                         <ul
                           class="dropdown-menu"
                           aria-labelledby="navbarDropdown"
                         >
-                          <li><a class="dropdown-item" href="#">Action</a></li>
                           <li>
-                            <a class="dropdown-item" href="#">Another action</a>
+
+                            <a
+                            data-toggle="modal"
+                            data-target="#register_id"
+                            href="#"
+                            class="nav-link"
+                          >
+                            <i class="fas fa-user-lock text-success"> Register</i> </a
+                          >
+
                           </li>
                           <li><hr class="dropdown-divider" /></li>
                           <li>
-                            <a class="dropdown-item" href="#"
-                              >Something else here</a
+                            <li>
+
+                              <a
+                              data-toggle="modal"
+                              data-target="#login_id"
+                              href="#"
+                              class="nav-link"
                             >
+                              <i class="fas fa-user-lock text-warning">Login</i> </a
+                            >
+  
+                            </li>
                           </li>
                         </ul>
                       </li>
-                      <li class="nav-item">
-                        <a
-                          data-toggle="modal"
-                          data-target="#register_id"
-                          href="#"
-                          class="nav-link"
-                        >
-                          <i class="fas fa-user-lock"></i> Register</a
-                        >
-                      </li>
+                     
                     </ul>
                   </div>
                   <div class="col-md-4">
@@ -143,6 +159,7 @@
       </nav>
     </div>
     <!-- navbar ends -->
+
     <!-- register_id -->
     <div class="modal fade" id="register_id" role="dialog">
       <div class="modal-dialog">
@@ -331,9 +348,9 @@
     <!-- header finish -->
 
     <!-- main start -->
-    <main class="container" style="margin-top: 4%">
+    <main class="container" style="margin-top: 8%">
       <!-- urunler -->
-      <section>
+      <section id="product">
         <h3 class="text-center text-uppercase">Ürünler</h3>
         <div class="row">
           <div class="col-md-4">
@@ -550,6 +567,11 @@
           </div>
         </div>
       </section>
+   
+   <section style="margin-top:8%">
+    <h3 class="text-center text-uppercase">S.S.S</h3>
+   </section>
+   
     </main>
     <!-- main finish -->
 
