--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- external css -->
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body style="background: #f4fdff;">
     <!-- Optional JavaScript -->
 
     <!-- navbar start -->
@@ -349,6 +349,24 @@
 
     <!-- main start -->
     <main class="container" style="margin-top: 8%">
+
+
+      <!-- company information -->
+      <section id="company_information">
+        <div class="container">
+          <h3 class="text-center text-uppercase">company</h3>
+          <div class="row">
+            <div class="col-md-3"><i  class="fab fa-battle-net"></i> <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>   </div>
+            <div class="col-md-3"><i style="color:orange;" class="fas fa-bezier-curve"></i><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p></div>
+            <div class="col-md-3"><i style="color:blue"  class="fas fa-bicycle"></i><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p></div>
+            <div class="col-md-3"><i style="color:red" class="far fa-bell"></i><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p></div>
+          </div>
+        </div>
+
+      </section>
+
+
+
       <!-- urunler -->
       <section id="product">
         <h3 class="text-center text-uppercase">Ürünler</h3>
@@ -568,10 +586,48 @@
         </div>
       </section>
    
-   <section style="margin-top:8%">
+   <section id="sss_id" style="margin-top:8%">
     <h3 class="text-center text-uppercase">S.S.S</h3>
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            HTML nedir
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            CSS nedir
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Jquery
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+    </div>
    </section>
-   
+   <br><br><br><br>
     </main>
     <!-- main finish -->
 
