--- a/index.html
+++ b/index.html
@@ -712,5 +712,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- external js -->
     <script src="js/external.js"></script>
+    <script src="js/tutorials_javascript.js"></script>
   </body>
 </html>
