vki jQuery tamam

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
         <!-- external css -->
         <link rel="stylesheet" href="style.css"/>
+
+       
     </head>
 
     <body style="background: #f4fdff;">
@@ -195,7 +197,7 @@
                                 <div class="col-md-10">
                                     <div class="form-group">
                                         <button type="reset" class="btn btn-danger">Temizle</button>
-                                        <button type="submit" class="btn btn-primary">Gönder</button>
+                                        <button type="submit" class="btn btn-primary" id="vki_hesapla" name="vki_hesapla">Gönder</button>
                                     </div>
                                 </div>
                             </div>
@@ -209,7 +211,7 @@
                             <div class="row mt-2">
                                 <div class="col-md-2">Sonuc:</div>
                                 <div class="col-md-10">
-                                    <p id="sounc" name="sonuc">...</p>
+                                    <p id="sonuc" name="sonuc">...</p>
                                 </div>
                             </div>
                         </div>
@@ -772,6 +774,8 @@
     <!-- external js -->
     <script src="js/external.js"></script>
     <script src="js/tutorials_javascript.js"></script>
+     <!-- vki js -->
+     <script src="js/jquery-exam.js"></script>
 </body>
 
 </html>
