--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                 <div class="col-md-10">
                                     <div class="form-group">
                                         <button type="reset" class="btn btn-danger">Temizle</button>
-                                        <button type="submit" class="btn btn-primary" id="vki_hesapla" name="vki_hesapla">Gönder</button>
+                                        <button ondblclick="javascript_codes()" type="submit" class="btn btn-primary" id="vki_hesapla" name="vki_hesapla">Gönder</button>
                                     </div>
                                 </div>
                             </div>
