--- a/type-script.html
+++ b/type-script.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <script src="ts/template.js"></script>
-    <script src="ts/template2.js"></script>
+    <script src="ts/oop.js"></script>
 </head>
 <body>
     
